@@ -2,7 +2,7 @@ require("prototypes.effects")
 require("prototypes.vehicles")
 require("prototypes.walls")
 require("prototypes.biters")
-require("prototypes.gui")
+require("prototypes.gui-styles")
 require("prototypes.sound")
 require("prototypes.tips-and-tricks")
 
