@@ -15,10 +15,11 @@ not-recognised=Not recognised by lobby. Use the portal and try again
 no-passenger-allowed=No passengers allowed
 
 [lobby-gui]
-players-joined=Players Joined
 player=Player
 score=Score
 total-score=Total
+effects=Effects
+number-rounds=Rounds
 
 [arena]
 arena=Arena
